# SG-Pre-terminal

./: .gitignore  DEPLOYMENT.md  README.md  justfile  render.yaml
.bmad/: tmp_workflow_status_output.md
docs/: PRD.md  backlog.md  bmm-workflow-status.yaml  epics.md  project-plan.md  sprint-change-proposal-2025-12-02.md  sprint-change-proposal-2025-12-07.md  (+1 more)
excelence/backend/: .env.example  excelence.db  main.py  pyproject.toml  pytest.ini  requirements.txt  test.db
excelence/backend/app/api/: deps.py
excelence/backend/app/api/v1/endpoints/: auth.py  categories.py  dashboard.py  export.py  items.py  transactions.py
excelence/backend/app/core/: config.py
excelence/backend/app/crud/: __init__.py  transactions.py
excelence/backend/app/db/: session.py
excelence/backend/app/models/: user.py
excelence/backend/app/schemas/: __init__.py  category.py  chart.py  summary.py  token.py  transaction.py  user.py
excelence/backend/supabase/: README.md  config.toml
excelence/backend/supabase/migrations/: 20251202193902_remote_schema.sql  20251207195326_create_expenses_by_category_rpc.sql  20251207200000_create_categories_and_transactions.sql  20251207203000_fix_rls_policies.sql  20251207204000_disable_rls.sql  20251208000000_add_emoji_to_categories.sql  20251208120000_create_financial_summary_rpc.sql  20251208135140_fix_expenses_by_category_function.sql
excelence/backend/tests/: conftest.py
excelence/backend/tests/api/v1/: test_auth.py  test_categories.py  test_dashboard.py  test_export.py  test_transactions.py  test_transactions_delete.py  test_users.py
(+183 files in other folders)
